Make long code headings wrap Fixes #281

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -161,6 +161,9 @@ a {
   width: 100%;
   height: 600px;
 }
+h1 code {
+  overflow-wrap: break-word;
+}
 main, #footer {
   background: var(--main-background);
   padding: 1em var(--offset);
